--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "game",
+  "name": "reactmemorygame",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://crsaxton87.github.io/React-Memory-Game",
